--- a/_posts/2019-07-04-the-us-narrative-today.html
+++ b/_posts/2019-07-04-the-us-narrative-today.html
@@ -2468,107 +2468,107 @@ stories:
   domain: http://www.milescitystar.com/
   link: https://www.milescitystar.com/content/wilson-wins-half-marathon-0
 images:
-- name: old-granary-field-oldhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-diego-rivera1.jpg
-- name: aws-s3-stories-cargo-ship-on-sea-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-blue-circuit.jpg
-- name: christianity-christianity-under-construction-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-smooth-ride.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
-- name: dc-statue-dcstatue-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-umberto-bocc.jpg
-- name: oldsmallboat-oldsmallboat-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-emily-carr.jpg
-- name: nyc-flag-api-conversations-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-alien-goggles.jpg
-- name: blossombar-deep-connections-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-00-00.jpg
-- name: oldhouse-oldhouse-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-attack-planes.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-rain.jpg
-- name: carry-load-carryload-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-atari-missle.jpg
-- name: cargo-ship-cargo-ship-on-sea-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colorful-blocks.jpg
-- name: old-granary-field-oldhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-kandinsky-bv.jpg
-- name: san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
-- name: birdhouse-birdhouse-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colored-circuits.jpg
-- name: christianity-christianity-under-construction-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dark-rain.jpg
-- name: server-racks-door-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-marcel-duchamp.jpg
-- name: blossombar-far-away-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-far-away-file-00-00-00-00.jpg
-- name: dragon_close-up-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-copper-circuit.jpg
-- name: beach-rocks-beach-rocks-currents-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-electricity.jpg
-- name: windowmountain-window-mountain-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-colored-circuits.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-diego-rivera1.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-diego-rivera1.png
-- name: capital-battle-capitolbattle-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-clean-view.jpg
-- name: server-cloud-server-racks-clouds-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dry-skin.jpg
-- name: yosemite-yosemite-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-oily-mcoilface.jpg
-- name: razorwire-DSC-0080-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-diego-rivera1.jpg
-- name: ellis-island-ellis-island-room.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-dali-three.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dali-three.JPG
-- name: crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
-- name: blossombar-dry-skin-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dry-skin-file-00-00-00-00.jpg
-- name: old-granary-field-oldhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-far-away.jpg
-- name: lincoln-memorial-lincolnmemorial-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-deep-connections.jpg
-- name: old-granary-field-granaryfield-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-gred-mash.jpg
-- name: server-cloud-server-racks-door-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-ww2-dresden.jpg
-- name: aws-s3-stories-containership-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-dark-dali.jpg
-- name: amusement-park-amusement-park-2-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crafty-painting.jpg
-- name: gypsy-wagon-gypsywagon-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-cinnamon-rolls.jpg
-- name: ellis-island-ellisisland-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-sand-paper.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-emily-carr.jpg
-- name: oldhotel-oldhotel-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-monet-one.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
-- name: window-window-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colorful-blocks.jpg
-- name: legal-statue-legalstatue-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-emily-carr.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-ww2-dresden.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-ww2-dresden.png
-- name: trucksilo-trucksilo-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-missle.jpg
-- name: beach-rocks-beach-rocks-currents-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dark-soul.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+- name: containership-containership-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-creativity.jpg
+- name: mosaic-face-mosaic-face-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit-4.jpg
+- name: beach-clouds-lifeguard-beachclouds-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-bright-sand.jpg
+- name: old-school-house-old-schoolhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-really-hot.jpg
+- name: bluelake-oily-mcoilface-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-00-00.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-monet-one.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
+- name: window-window-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crabapple.jpg
+- name: old-door-lock-old-door-lock-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-granite.jpg
+- name: desert-dragon-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-diego-rivera1.jpg
+- name: liberty-back-statue-liberty-back-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alberto-giacometti.jpg
+- name: powerlines-power-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-clean-view.jpg
+- name: walled-garden-walled-garden-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-kandinsky-bv.jpg
+- name: abe-lincoln-one-smoking-cigarette-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-07-91.jpg
+- name: old-school-house-old-schoolhouse-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-monet-one.jpg
+- name: san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+- name: fence-mexico-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-spagetti-accident.jpg
+- name: aws-s3-stories-server-cloud1-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-cloud1-internet-numbers.jpg
+- name: lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
+- name: oldhouse-oldhouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-propaganda-leaflets.jpg
+- name: 35201856153_61bc075e4b-rain-princess.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-rain-princess.jpg
 - name: old-cabin-oldcabin-dali-three.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dali-three.jpg
-- name: dragon_close-up-rain-princess.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-rain-princess.jpg
-- name: adam-smith-adam-smith-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-propaganda-leaflets.jpg
+- name: flower-barbed-wire-flower-barbed-wire-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-matrix.jpg
+- name: aws-s3-square-ellis-island-nazi-poster-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-ellis-island-nazi-poster-square.jpg
+- name: dragon-desert-desert-dragon-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-post-modern.jpg
+- name: fence-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence.jpg
+- name: ellis-island-ellis-island-room-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-smoking-cigarette.jpg
+- name: oldhotel-oldhotel-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colorful-dream.jpg
+- name: bordercrossing-bordercrossing-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colorful-dream.jpg
+- name: powerlines-power-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-rainbow-festival.jpg
+- name: school-clouds-church-clouds-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dali-three.jpg
+- name: oldhotel-oldhotel-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-light-dali.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-wols.jpg
+- name: store-on-corner-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-really-hot.jpg
+- name: oldcabin-oldcabin-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-spagetti-accident.jpg
+- name: san-francisco-street-view-san-francisco-street-view-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-satan-red.jpg
+- name: adam-smith-adam-smith-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-purple-storm.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
+- name: rockingchair-rockingchair-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-kandinsky-bv.jpg
+- name: downtown-los-angeles-downtown-la-jap-dys-1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-jap-dys-1.JPG
+- name: fence-fence-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-green-zuma.jpg
+- name: castle-wall-DSC-0067-internet-numbers.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-internet-numbers.JPG
+- name: aws-s3-square-64-132-800-500-0-max-0--5--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-132-800-500-0-max-0--5--1-square.jpg
+- name: aws-s3-stories-new-80-140-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-80-140-800-500-0-max-0--5--5.jpg
+- name: bluelake-blue-brush-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-00-00.jpg
+- name: school-clouds-church-clouds-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-emily-carr.jpg
+- name: white-house-lawn-white-house-lawn-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-gred-mash.jpg
+- name: store-on-corner-oldcabin-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-internet-numbers.jpg
+- name: dragon-desert-desert-dragon-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-far-away.jpg
+- name: flower-barbed-wire-flower-barbed-wire-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-aqua.jpg
 ---
 Okarche Board Dismisses Raupe.&nbsp;Vermillion Artist Envisions Prehistoric Creatures With Scrap Metal.&nbsp;Zabiegi Na Cellulit Wojkowice.&nbsp;Thanks For Farewell Article On John LoCascio.&nbsp;Lines Are Drawn In Family Feud Over Recovering Addict.&nbsp;Boost Social Security Checks By Tapping IRAs Early, Suggests Study.&nbsp;Musician With Roots In Kansas Launches New Album.&nbsp;Trails Group Appeals Ruling Over Access To Private Tiburon Ridge Property.&nbsp;
